# .hermes

./: .env.dev.example  .gitignore  .skills_prompt_snapshot.json  CLAUDE.md  DESIGN.md  FULL_REPORT.md  Makefile  POST_AUDIT_VERIFICATION.md  POST_REMEDIATION_AUDIT.md  README.md  RELEASE_READINESS.md  docker-compose.dev.yml  hermes_post_audit_verification_prompt.md  litellm_config.yaml  port3000.html  port3100.html  start_gateway.sh  start_litellm.sh
completions/: hermes.zsh
hermes/: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  response_3000.html  response_3100.html
hermes/.github/workflows/: node-ci.yml  python-ci.yml
hermes/apps/api/: README.md
hermes/apps/api/tests/: test_backend_bridge_routes.py  test_health.py  test_security.py
hermes/apps/web/: README.md  middleware.ts  next.config.ts  package.json  smoke_check.html
hermes/apps/web/app/: globals.css  layout.tsx  page.tsx
hermes/apps/web/components/: ApprovalQueuePanel.tsx  KillSwitchPanel.tsx  PortfolioSyncButton.tsx
hermes/apps/web/lib/: hermes-api.ts
hermes/docs/: agents.md  deployment.md  development.md  full-implementation-audit.md  index.md  local-runtime-flow.md  mission-control.md  post-fix-verification-audit.md  runtime-consolidation-plan.md  shared-intelligence-layer.md
hermes/infrastructure/docker/: api.Dockerfile  web.Dockerfile
hermes/infrastructure/scripts/: bootstrap.sh  wait-for-db.sh
(+568 files in other folders)
