[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-cryptocurrency-ai-trader"
version = "0.1.0"
description = "Production-oriented monorepo scaffold for Hermes Cryptocurrency AI Trader."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hermes contributors"}]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.2.1,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "psycopg[binary]>=3.1.19,<4.0.0",
  "sqlalchemy>=2.0.44,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0"
]

[dependency-groups]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pre-commit>=3.7.1,<4.0.0",
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.6,<1.0.0",
  "ruff>=0.5.0,<1.0.0"
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = [
  "apps/api/src",
  "packages/agents/src",
  "packages/tools/src",
  "packages/resources/src",
  "packages/mission-control/src",
  "packages/policies/src",
  "packages/observability/src",
  "packages/shared/src"
]
include = [
  "hermes_api*",
  "hermes_agents*",
  "hermes_tools*",
  "hermes_resources*",
  "hermes_mission_control*",
  "hermes_policies*",
  "hermes_observability*",
  "hermes_shared*"
]
